--- a/package.json
+++ b/package.json
@@ -2,15 +2,33 @@
   "name": "api-extractor-nx-example",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "extract-api": "nx run-many --target=extract-api --all"
+  },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "tslib": "^2.3.0"
+  },
   "devDependencies": {
+    "@microsoft/api-extractor": "7.34.4",
     "@nrwl/cli": "14.7.5",
+    "@nrwl/eslint-plugin-nx": "14.7.5",
+    "@nrwl/jest": "14.7.5",
     "@nrwl/js": "14.7.5",
+    "@nrwl/linter": "14.7.5",
     "@nrwl/workspace": "14.7.5",
+    "@types/jest": "28.1.1",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
     "nx": "14.7.5",
     "prettier": "^2.6.2",
+    "ts-jest": "28.0.5",
+    "ts-node": "10.9.1",
     "typescript": "~4.8.2"
   }
 }
