--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@myorg/packageA": ["packages/package-a/src/index.ts"],
+      "@myorg/packageB": ["packages/package-b/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
